--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Fiasco</title>
+    <title>Le Fiasco</title>
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
 <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Source+Sans+Pro:wght@300;400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="screen.css">
 </head>
 <body>
-    Salut
+    <header class="header">
+        <div class="topbar">
+            <div class="logo">
+                <a href="index.html">Le Fiasco</a>
+            </div>
+            <nav class="menu">
+                <a href="/about.html" class="menu-item">A propos</a>
+                <a href="/menu.html" class="menu-item">Menu</a>
+                <a href="/recette.html" class="menu-item">Recette</a>
+                <a href="/contact.html" class="menu-item">Contact</a>
+                <a href="/reserver.html" class="menu-item menu-button">Réserver</a>
+            </nav>
+        </div>
+        <div class="baseline">
+            <span class="baseline-welcome">Welcome</span> 
+            <strong class="baseline-name">The Fiasco</strong>
+            <span class="baseline-slogan">Spécialité Méditerranéenne</span>
+        </div>
+    </header>
 </body>
 </html>
