--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="topbar">
             <div class="logo">
-                <a href="index.html">Le Fiasco</a>
+                <a href="/index.html">Le Fiasco</a>
             </div>
             <nav class="menu">
                 <a href="/about.html" class="menu-item">A propos</a>
