Creation of the presentation bloc

--- a/index.html
+++ b/index.html
@@ -29,5 +29,41 @@
             <span class="baseline-slogan">Spécialité Méditerranéenne</span>
         </div>
     </header>
+    <section class="home-section">
+        <div class="container-small">
+            <div class="block block-left">
+                <div class="block-img">
+                    <img src="img/burger.jpg" alt="">
+                </div>
+                <div class="block-body">
+                    <h2 class="title"><span>Discover</span> our gastronomy</h2>
+                    <p>
+                        Attending a trade show can be a very effective method of promoting your company and its products. And one of the most effective ways to optimize your trade show display and increase traffic to your booth is through the use of banner stands
+                    </p>
+                    <a href="recipe.html" class="more">See more</a>
+                </div>
+            </div>
+            <div class="block block-right">
+                <div class="block-img">
+                    <img src="img/crusted-chicken.jpg" alt="">
+                </div>
+                <div class="block-body">
+                    <h2 class="title"><span>Discover</span> our gastronomy</h2>
+                    <p>
+                        Attending a trade show can be a very effective method of promoting your company and its products. And one of the most effective ways to optimize your trade show display and increase traffic to your booth is through the use of banner stands
+                    </p>
+                    <a href="recipe.html" class="more">See more</a>
+                </div>
+            </div>
+            <div class="block block-centered">
+                <div class="block-body">
+                    <h2 class="title"><span>Menu</span> certified bio</h2>
+                    <p>
+                        Classified advertising is a form of advertising that is particulary common in newspapers and other periodicals. A classified is usally textually based and can consist of as little as the type of item being sold, and a contact number to call for more information.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
