--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Le Fiasco</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
-<link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Source+Sans+Pro:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="screen.css">
+    <link href="https://fonts.googleapis.com/css?family=Pinyon+Script|Source+Sans+Pro:300,400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="screen.css"> 
 </head>
 <body>
     <header class="header">
@@ -18,15 +17,15 @@
             <nav class="menu">
                 <a href="/about.html" class="menu-item">A propos</a>
                 <a href="/menu.html" class="menu-item">Menu</a>
-                <a href="/recette.html" class="menu-item">Recette</a>
+                <a href="/recipes.html" class="menu-item">Recette</a>
                 <a href="/contact.html" class="menu-item">Contact</a>
                 <a href="/reserver.html" class="menu-item menu-button">Réserver</a>
             </nav>
         </div>
         <div class="baseline">
             <span class="baseline-welcome">Welcome</span> 
-            <strong class="baseline-name">The Fiasco</strong>
-            <span class="baseline-slogan">Spécialité Méditerranéenne</span>
+            <strong class="baseline-name">The Fiasco</strong> 
+            <span class="baseline-slogan">spécialité méditerranéenne</span>
         </div>
     </header>
     <section class="home-section">
@@ -38,9 +37,11 @@
                 <div class="block-body">
                     <h2 class="title"><span>Discover</span> our gastronomy</h2>
                     <p>
-                        Attending a trade show can be a very effective method of promoting your company and its products. And one of the most effective ways to optimize your trade show display and increase traffic to your booth is through the use of banner stands
+                        Attending a trade show can be a very effective method of promoting your company and its products. And one of the most effective ways to optimize your trade show display and increase traffic to your booth is through the use of banner stands. 
                     </p>
-                    <a href="recipe.html" class="more">See more</a>
+                    <div class="more">
+                        <a href="recipe.html">See more</a>
+                    </div>
                 </div>
             </div>
             <div class="block block-right">
@@ -50,20 +51,56 @@
                 <div class="block-body">
                     <h2 class="title"><span>Discover</span> our gastronomy</h2>
                     <p>
-                        Attending a trade show can be a very effective method of promoting your company and its products. And one of the most effective ways to optimize your trade show display and increase traffic to your booth is through the use of banner stands
+                        Attending a trade show can be a very effective method of promoting your company and its products. And one of the most effective ways to optimize your trade show display and increase traffic to your booth is through the use of banner stands. 
                     </p>
-                    <a href="recipe.html" class="more">See more</a>
+                    <div class="more">
+                        <a href="recipe.html">See more</a>
+                    </div>
                 </div>
             </div>
-            <div class="block block-centered">
+            <div class="block block-centered block-last">
                 <div class="block-body">
                     <h2 class="title"><span>Menu</span> certified bio</h2>
                     <p>
-                        Classified advertising is a form of advertising that is particulary common in newspapers and other periodicals. A classified is usally textually based and can consist of as little as the type of item being sold, and a contact number to call for more information.
+                        Classified advertising is a form of advertising that is particularly common in newspapers and other periodicals. A classified is usually textually based and can consist of as little as the type of item being sold, and a contact number to call for more information                    
                     </p>
                 </div>
             </div>
+            <nav class="ingredients-menu">
+                <a href="#" class="active">Eggs</a>
+                <a href="#">Porc</a>
+                <a href="#">Chicken</a>
+                <a href="#">Fish</a>
+                <a href="#">Vegan</a>
+            </nav>
         </div>
+        <div class="container">
+            <div class="menu-summary" id="menu">
+                <div class="menu-summary-item">
+                    <img src="img/crusted-chicken-square.jpg" alt="" class="menu-summary-img">
+                    <h3 class="menu-summary-title">Amazing Crusted Chicken</h3>
+                    <p>Beryl Cook is one of Britain’s most talented and amusing artists .Beryl’s pictures feature women of all shapes and sizes enjoying themselves </p>
+                    <div class="menu-summary-price">$20</div>
+                </div>
+                <div class="menu-summary-item">
+                    <img src="img/bobun-light-square.jpg" alt="" class="menu-summary-img">
+                    <h3 class="menu-summary-title">BoBun Light Odd</h3>
+                    <p>Beryl Cook is one of Britain’s most talented and amusing artists .Beryl’s pictures feature women of all shapes and sizes enjoying themselves </p>
+                    <div class="menu-summary-price">$20</div>
+                </div>
+                <div class="menu-summary-item">
+                    <img src="img/poisson-square.jpg" alt="" class="menu-summary-img">
+                    <h3 class="menu-summary-title">Amazing Crusted Chicken</h3>
+                    <p>Beryl Cook is one of Britain’s most talented and amusing artists .Beryl’s pictures feature women of all shapes and sizes enjoying themselves </p>
+                    <div class="menu-summary-price">$20</div>
+                </div>
+                <div class="menu-summary-item">
+                    <img src="img/paella-square.jpg" alt="" class="menu-summary-img">
+                    <h3 class="menu-summary-title">Spicy Egg Paella</h3>
+                    <p>Beryl Cook is one of Britain’s most talented and amusing artists .Beryl’s pictures feature women of all shapes and sizes enjoying themselves </p>
+                    <div class="menu-summary-price">$20</div>
+                </div>
+            </div>
     </section>
 </body>
 </html>
