Update recipe1 link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="menu">
                 <a href="/about.html" class="menu-item">A propos</a>
                 <a href="/menu.html" class="menu-item">Menu</a>
-                <a href="/recipes.html" class="menu-item">Recette</a>
+                <a href="/recipe1.html" class="menu-item">Recette</a>
                 <a href="/contact.html" class="menu-item">Contact</a>
                 <a href="/reserver.html" class="menu-item menu-button">Réserver</a>
             </nav>
