update le to the

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Le Fiasco</title>
+    <title>The Fiasco</title>
     <link href="https://fonts.googleapis.com/css?family=Pinyon+Script|Source+Sans+Pro:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="screen.css"> 
 </head>
@@ -12,14 +12,14 @@
     <header class="header">
         <div class="topbar">
             <div class="logo">
-                <a href="/index.html">Le Fiasco</a>
+                <a href="/index.html">The Fiasco</a>
             </div>
             <nav class="menu">
-                <a href="/about.html" class="menu-item">A propos</a>
+                <a href="/about.html" class="menu-item">About</a>
                 <a href="/menu.html" class="menu-item">Menu</a>
-                <a href="/recipe1.html" class="menu-item">Recette</a>
+                <a href="/recipe1.html" class="menu-item">Recipe</a>
                 <a href="/contact.html" class="menu-item">Contact</a>
-                <a href="/reserver.html" class="menu-item menu-button">Réserver</a>
+                <a href="/reserver.html" class="menu-item menu-button">Reservation</a>
             </nav>
         </div>
         <div class="baseline">
@@ -218,7 +218,7 @@
                 </div>
             </div>
             <div class="footer-credits">
-                <span>2018 THE FIASCO</span>. All rights reserved.
+                <span>2021 THE FIASCO</span>. All rights reserved.
             </div>
         </div>
     </footer>
