MEDITERRANEAN SPECIALTY translation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="baseline">
             <span class="baseline-welcome">Welcome</span> 
             <strong class="baseline-name">The Fiasco</strong> 
-            <span class="baseline-slogan">spécialité méditerranéenne</span>
+            <span class="baseline-slogan">mediterranean specialty</span>
         </div>
     </header>
     <section class="home-section">
